--- a/landing-page/style_landing-page.css
+++ b/landing-page/style_landing-page.css
@@ -110,9 +110,11 @@ ul a {
   padding-top: 150px;
 }
 
+/* MAIN */
 .text-img-box {
   display: flex;
   justify-content: center;
+  gap: 15px;
   width: 100%;
 }
 
@@ -186,9 +188,10 @@ ul a {
 /* WHAT DO YOU GET FROM - SECTION */
 .what-get-section {
   background-color: #fff;
-  height: 550px;
+  height: 600px;
   max-width: 100%;
   padding-top: 100px;
+  position: relative;
 }
 .what-get-box {
   width: 100%;
@@ -196,10 +199,10 @@ ul a {
   gap: 20px;
 }
 .what-get-text-box {
-  width: 30%;
+  width: 35%;
 }
 .what-get-carousel-box {
-  width: 70%;
+  width: 65%;
 }
 .carousel-text-box {
   display: flex;
@@ -218,6 +221,7 @@ ul a {
   font-size: 40px;
   font-weight: 700;
   color: #141e32;
+  margin-top: 0;
 }
 
 .what-get-text p:last-child {
@@ -261,17 +265,93 @@ ul a {
 }
 
 .carousel-text-box {
-  margin-bottom: 25px;
+  /* margin-bottom: 25px; */
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-20%, -50%);
 }
 
 .carousel-btn-box {
   display: flex;
   justify-content: end;
   gap: 20px;
+  margin-top: 360px;
+  margin-right: 20px;
 }
+/* matosi pilkas fonas iš po button ???? */
 .carousel-btn-box button {
   height: 40px;
   width: 40px;
   border-radius: 50%;
   border: none;
+}
+
+/* SECTION - PEOPLE TAKING COURSES */
+.taking-courses-section {
+  background-color: #545be8;
+
+  /* gradient */
+  height: 643px;
+  max-width: 100%;
+}
+
+.text-img-box-taking-courses {
+  gap: 80px;
+  align-items: start;
+  padding: 50px 40px;
+}
+
+.taking-courses-text-box {
+  width: 50%;
+}
+
+.taking-courses-text {
+  margin-top: 80px;
+}
+
+.taking-courses-text p:first-child {
+  font-family: Inter, sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  text-transform: uppercase;
+  color: #f0c932;
+}
+
+.taking-courses-text h1 {
+  font-weight: 700;
+  font-size: 40px;
+  text-transform: capitalize;
+  color: #fff;
+  margin-top: 26px;
+}
+
+.taking-courses-text p:last-child {
+  font-weight: 400;
+  font-size: 18px;
+  color: #ddd;
+}
+
+.taking-couses-statistics {
+  display: flex;
+  gap: 30px;
+  justify-content: space-between;
+  text-align: center;
+}
+
+.taking-couses-statistics div p:first-child {
+  font-family: Inter, sans-serif;
+  font-weight: 700;
+  font-size: 24px;
+  color: #f0c932;
+  margin-bottom: 10px;
+}
+
+.taking-couses-statistics div p:last-child {
+  font-family: Inter, sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  color: #ddd;
+  text-transform: capitalize;
+  margin: 0;
 }
