--- a/2024-01-22/grid_RegiM-landing-page/style-RegiM-landing-page.css
+++ b/2024-01-22/grid_RegiM-landing-page/style-RegiM-landing-page.css
@@ -25,6 +25,10 @@ img {
 .container {
   max-width: 1280px;
 }
+
+.btn {
+  font-weight: 500;
+}
 .section-1 {
   /* height: 820px; */
   margin-bottom: 160px;
@@ -135,6 +139,11 @@ img {
 footer {
   background: #111827;
 }
+
+.container-footer {
+  /* padding: 48px 208px; */
+  margin: 112px 320px;
+}
 .container-footer h1 {
   color: #fff;
   text-align: center;
@@ -143,6 +152,7 @@ footer {
   font-weight: 600;
   line-height: 60px; /* 125% */
   letter-spacing: -0.48px;
+  margin-bottom: 16px;
 }
 
 .container-footer p {
@@ -153,8 +163,24 @@ footer {
   font-weight: 400;
   line-height: 28px; /* 155.556% */
   letter-spacing: 0.18px;
+  margin-bottom: 40px;
 }
 
+.line {
+  border: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+.footer-line-logo {
+  position: relative;
+  /* margin-bottom: 24px; */
+}
+
+.footer-last img {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 .footer-text p {
   color: #9ca3af;
   font-family: "General Sans";
@@ -162,4 +188,10 @@ footer {
   font-weight: 500;
   line-height: 20px; /* 142.857% */
   letter-spacing: 0.14px;
+  margin-bottom: 40px;
+  margin-top: 24px;
+}
+
+.footer-text span {
+  color: #e0f2fe;
 }
