--- a/2024-01-22/grid_RegiM-landing-page/style-RegiM-landing-page.css
+++ b/2024-01-22/grid_RegiM-landing-page/style-RegiM-landing-page.css
@@ -75,50 +75,49 @@ header {
   font-family: "General Sans";
   color: #111827;
   text-align: center;
-  font-size: 56px;
+  font-size: 36px;
   font-weight: 600;
-  line-height: 72px; /* 128.571% */
-  letter-spacing: -0.56px;
+  line-height: 48px;
+  letter-spacing: -0.36px;
 }
 
 .text-video-container p {
   color: #374151;
   text-align: center;
   font-family: "General Sans";
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 400;
-  line-height: 28px; /* 155.556% */
-  letter-spacing: 0.18px;
+  line-height: 24px;
+  letter-spacing: 0.16px;
   margin-bottom: 40px;
 }
 
 .text-video-container {
-  margin-bottom: 100px;
-}
-
-.center {
-  display: flex;
-  justify-content: center;
+  margin-bottom: 72px;
 }
 
 .icons-container h4 {
   color: #111827;
-  text-align: center;
+  text-align: left;
   font-family: "General Sans";
-  font-size: 24px;
+  font-size: 20px;
   font-weight: 600;
-  line-height: 32px; /* 133.333% */
-  letter-spacing: -0.24px;
+  line-height: 28px;
+  letter-spacing: -0.2px;
 }
 
 .icons-container p {
   color: #374151;
-  text-align: center;
+  text-align: left;
   font-family: "General Sans";
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 400;
-  line-height: 24px; /* 150% */
-  letter-spacing: 0.16px;
+  line-height: 20px;
+  letter-spacing: 0.14px;
+}
+
+.icon-box {
+  gap: 16px;
 }
 
 /* SECTION - 3 */
@@ -207,6 +206,7 @@ footer {
 }
 
 /* Planšetė */
+/* NAV-SECTION-1 */
 @media screen and (min-width: 768px) {
   .text-container-section-1 h1 {
     font-size: 64px;
@@ -218,7 +218,7 @@ footer {
     font-family: "General Sans";
     font-size: 18px;
     font-weight: 400;
-    line-height: 28px; /* 155.556% */
+    line-height: 28px;
     letter-spacing: 0.18px;
   }
 
@@ -229,11 +229,62 @@ footer {
   header {
     margin-bottom: 80px;
   }
+  /* SECTION-2 */
+  .text-video-container h1 {
+    font-size: 48px;
+    font-weight: 600;
+    line-height: 60px;
+    letter-spacing: -0.48px;
+  }
+
+  .text-video-container p {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 28px;
+    letter-spacing: 0.18px;
+  }
+
+  .icon-box {
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 32px;
+  }
+
+  .icon-text h4,
+  .icon-text p {
+    text-align: center;
+  }
+
+  .text-video-container {
+    margin-bottom: 112px;
+  }
+
+  .icons-container h4 {
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 32px;
+    letter-spacing: -0.24px;
+  }
+
+  .icons-container p {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.16px;
+  }
 }
 
 /* Desktopas */
 @media screen and (min-width: 992px) {
   .text-container-section-1 {
     padding-left: 12px;
+  }
+
+  /* SECTION-2 */
+  .text-video-container h1 {
+    font-size: 56px;
+    font-weight: 600;
+    line-height: 72px;
+    letter-spacing: -0.56px;
   }
 }
