--- a/2024-02-28_Node.Js/vite-react-app/src/App.css
+++ b/2024-02-28_Node.Js/vite-react-app/src/App.css
@@ -1,1 +1,10 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
+
+header {
+  display: flex;
+}
+
+.container {
+  width: 900px;
+  margin: 0 auto;
+}
