--- a/style_turinys.css
+++ b/style_turinys.css
@@ -5,14 +5,14 @@
 }
 
 body {
-  font-family: "Rubik", sans-serif;
-
+  /* font-family: "Rubik", sans-serif; */
+/* 
   height: 100vh;
-  display: flex;
+  display: flex; */
   /* justify-content: center; */
   /* align-items: center; */
 }
-
+/* 
 .conteiner {
   /* background-color: #e7f8d1; */
   width: 700px;
@@ -20,7 +20,7 @@ body {
   padding: 20px 70px;
   /* border-radius: 10px;
   box-shadow: box-shadow: 0 12px 24px rgba(0, 0, 0, 0.1); */
-}
+} */
 ul {
   /* list-style: none; */
 }
@@ -28,8 +28,8 @@ ul {
 li {
 }
 
-a {
+/* a {
   text-decoration: none;
   color: #555;
   font-size: 20px;
-}
+} */
