--- a/2024-03-19/authentification/client/src/components/new-post/NewPost.module.css
+++ b/2024-03-19/authentification/client/src/components/new-post/NewPost.module.css
@@ -5,4 +5,23 @@
   top: 0;
   left: 0;
   background-color: rgba(0, 0, 0, 0.477);
+  z-index: 100;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.modal {
+  max-width: 606px;
+  width: 100%;
+  background-color: white;
+  border-radius: 12px;
+}
+.modal h2 {
+  font-size: 16px;
+  border-bottom: 1px solid rgb(221, 221, 221);
+  text-align: center;
+  padding: 0.8rem 0;
+}
+.modal form {
+  padding: 2rem;
 }
