--- a/2024-03-22_Instagram/Instagram_app/client/src/components/new-comment/NewComment.module.css
+++ b/2024-03-22_Instagram/Instagram_app/client/src/components/new-comment/NewComment.module.css
@@ -1,23 +1,24 @@
 .commentForm {
-    display: flex;
-    border-top: 1px solid var(--border-color);
-    padding: 0 1.2rem;
+  display: flex;
+  border-top: 1px solid var(--border-color);
+  padding: 0.5rem 1.2rem;
 }
 
 .commentForm textarea {
-    width: 100%;
-    border: none;
-    resize: none;
-    padding: .2rem 0;
+  width: 100%;
+  border: none;
+  resize: none;
+  padding: 0.2rem 0;
+  height: 35px;
 }
 
 .commentForm textarea:focus {
-    outline: none;
+  outline: none;
 }
 
 .commentForm button {
-    background: none;
-    border: none;
-    font-weight: bold;
-    color: #0095f6;
+  background: none;
+  border: none;
+  font-weight: bold;
+  color: #0095f6;
 }
