--- a/2024-03-22_Instagram/Instagram_app/client/src/components/new-post/NewPost.module.css
+++ b/2024-03-22_Instagram/Instagram_app/client/src/components/new-post/NewPost.module.css
@@ -10,18 +10,21 @@
   align-items: center;
   justify-content: center;
 }
+
 .modal {
   max-width: 606px;
   width: 100%;
   background-color: white;
   border-radius: 12px;
 }
+
 .modal h2 {
   font-size: 16px;
-  border-bottom: 1px solid rgb(221, 221, 221);
+  border-bottom: 1px solid var(--border-color);
   text-align: center;
   padding: 0.8rem 0;
 }
+
 .modal form {
   padding: 2rem;
 }
