--- a/2024-03-22_Instagram/Instagram_app/client/src/components/sidebar/Sidebar.module.css
+++ b/2024-03-22_Instagram/Instagram_app/client/src/components/sidebar/Sidebar.module.css
@@ -5,21 +5,25 @@
   position: fixed;
   top: 0;
   left: 0;
-  border-right: 1px solid rgb(221, 221, 221);
-  padding: 2.5rem 1rem;
+  border-right: 1px solid var(--border-color);
+  padding: 2.8rem 0.8rem;
 }
+
 .logo {
-  padding: 0 1rem;
-  margin-bottom: 2rem;
+  padding: 0 0.9rem;
+  margin-bottom: 2.2rem;
 }
+
 .logo img {
   max-width: 103px;
 }
+
 .navigation ul {
   list-style: none;
   margin: 0;
   padding: 0;
 }
+
 .link {
   font-size: 16px;
   color: black;
@@ -29,10 +33,13 @@
   padding: 0.3rem 0.8rem;
   border-radius: 5px;
   margin-bottom: 0.5rem;
+  transition: background-color 0.3s ease-in-out;
 }
+
 .link i {
   font-size: 23px;
 }
+
 .link:hover {
   background-color: rgb(222, 222, 222);
 }
