--- a/2024-03-22_Instagram/Instagram_app/client/src/components/single-comment/SingleComment.module.css
+++ b/2024-03-22_Instagram/Instagram_app/client/src/components/single-comment/SingleComment.module.css
@@ -1,21 +1,21 @@
 .comment {
-    display: flex;
-    gap: 1rem;
-    margin-bottom: 1rem;
+  display: flex;
+  gap: 1rem;
+  margin-bottom: 1rem;
 }
 
 .userPhoto img {
-    width: 32px;
-    height: 32px;
-    object-fit: cover;
-    border-radius: 50%;
+  width: 32px;
+  height: 32px;
+  object-fit: cover;
+  border-radius: 50%;
 }
 
 .content strong {
-    margin-right: .4rem;
+  margin-right: 0.4rem;
 }
 
 .commentDate {
-    font-size: 12px;
-    color: gray;
+  font-size: 12px;
+  color: gray;
 }
